--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,12 @@ inputs:
   JENKINS_URL:
     description: 'Jenkins server url'
     required: true
+  JENKINS_USERNAME:
+    description: 'Jenkins username'
+    required: true
+  JENKINS_API_TOKEN:
+    description: 'Jenkins user API token. Can be generated via <jenkins-server>/user/<username>/configure'
+    required: true
   JENKINS_JOB:
     description: 'Jenkins job to trigger'
     required: true
@@ -20,8 +26,8 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ github.event.inputs.JENKINS_URL }}
-    - ${{ secrets.JENKINS_USERNAME }}
-    - ${{ secrets.JENKINS_API_TOKEN }}
-    - ${{ github.event.inputs.JENKINS_JOB }}
-    - ${{ github.event.inputs.JENKINS_JOB_PARAMETERS }}
+    - ${{ inputs.JENKINS_URL }}
+    - ${{ inputs.JENKINS_USERNAME }}
+    - ${{ inputs.JENKINS_API_TOKEN }}
+    - ${{ inputs.JENKINS_JOB }}
+    - ${{ inputs.JENKINS_JOB_PARAMETERS }}
