Squashed commit of the following:
commit 194b0c9db241b284d12ebb1924380f9d7018d67d
Author: Pnikanti <patrick.nikanti@swtech.fi>
Date:   Mon Jan 17 06:03:37 2022 +0200

    Update README. Remove exit codes as SetFailed method already sets them.

commit f2030510fa0d3025888e490f5d930c566da33e6f
Author: Pnikanti <patrick.nikanti@swtech.fi>
Date:   Sun Jan 16 23:05:07 2022 +0200

    rework code. rework documentation.

commit e5c864b9be9b16ddb3142f1347f478587370c313
Author: Pnikanti <patrick.nikanti@swtech.fi>
Date:   Sun Jan 16 21:35:53 2022 +0200

    rename entrypoint.js to index.js. add dotenv dependency. add updated compiled index.js. update .gitignore

commit 02705eeac116a7117d2f1ad9131f2fab68009f2d
Author: Pnikanti <patrick.nikanti@swtech.fi>
Date:   Sun Jan 16 21:10:47 2022 +0200

    change main of action.yml

commit c3c19feb0811f36d3b388e50b29f625ebbb08efb
Author: Pnikanti <patrick.nikanti@swtech.fi>
Date:   Sun Jan 16 21:09:06 2022 +0200

    add ncc package. add compiled version of the action to dist/ folder. cosmetic changes to code. update readme

commit 53ce200d3ecac59d501ca80c81c1b4c7807cddfe
Author: Pnikanti <patrick.nikanti@swtech.fi>
Date:   Sun Jan 16 20:19:52 2022 +0200

    change node16 -> node12

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Jenkins Triggerer'
-description: 'Trigger Jenkins jobs with ease! Derived from build-jenkins-job action.'
+description: 'Trigger Jenkins jobs with ease!'
 
 inputs:
   JENKINS_URL:
@@ -9,13 +9,13 @@ inputs:
     description: 'Jenkins username'
     required: true
   JENKINS_API_TOKEN:
-    description: 'Jenkins user API token. Can be generated via <jenkins-server>/user/<username>/configure'
+    description: 'Jenkins user API token. Can be generated from <jenkins-server>/user/<username>/configure'
     required: true
   JENKINS_JOB:
     description: 'Jenkins job to trigger'
     required: true
   JENKINS_JOB_PARAMETERS:
-    description: "Job parameters in JSON string format, i.e '{'param1': 'value1', 'param2': 'value2'}' "
+    description: 'Job parameters in JSON string format, i.e "{"key-1": "value-1", "key-2": "value-2"}"'
     required: false
 
 outputs:
@@ -23,5 +23,5 @@ outputs:
     description: 'Build status'
 
 runs:
-  using: 'node16'
-  main: 'entrypoint.js'
+  using: 'node12'
+  main: 'dist/index.js'
